--- a/EcommerceBack/Views/Devolucao/Devolucao.cshtml
+++ b/EcommerceBack/Views/Devolucao/Devolucao.cshtml
@@ -67,7 +67,7 @@
             <div class="linha-horizontal"></div>
 
             <div class="solicitar-devolucao">
-                <button class="btn-azul" onclick="solicitarDevolucao(@item.ped_cal_cal_id, @item.ped_cal_ped_id)">Solicitar devolução</button>
+                <button id="calcado-devolucao" class="btn-azul" onclick="solicitarDevolucao(@item.ped_cal_cal_id, @item.ped_cal_ped_id)">Solicitar devolução</button>
             </div>
         }
     }
