--- a/EcommerceBack/Views/PedidosCliente/PedidosCliente.cshtml
+++ b/EcommerceBack/Views/PedidosCliente/PedidosCliente.cshtml
@@ -72,7 +72,7 @@
             
         }
             <div class="center-acompanhar-pedido">
-                <a class="acompanhar-pedido-button" data-pedidoid="@pedido.Key">
+                <a class="acompanhar-pedido-button" data-pedidoid="@pedido.Key" id="acompanhaPedido">
                     <button class="btn-azul-pedido" onclick="redirectToStatusPedidoCliente(this.getAttribute('data-pedidoid'))">Acompanhar Pedido</button>
                 </a>
             </div>
