--- a/EcommerceBack/Views/StatusPedidoCliente/StatusPedidoCliente.cshtml
+++ b/EcommerceBack/Views/StatusPedidoCliente/StatusPedidoCliente.cshtml
@@ -86,8 +86,8 @@
                 </div>
 
                     <div class="center-acompanhar-pedido">
-                            <a class="acompanhar-pedido-button" data-calcadoid="@item.ped_cal_cal_id" data-pedidoid="@item.ped_cal_ped_id">
-                                <button class="btn-azul-pedido" onclick="redirectToDevolucaoCalcado(this.getAttribute('data-calcadoid'), this.getAttribute('data-pedidoid'))">Solicitar devolução</button>
+                        <a class="acompanhar-pedido-button" data-calcadoid="@item.ped_cal_cal_id" data-pedidoid="@item.ped_cal_ped_id">
+                             <button id="ped-@item.ped_cal_cal_id"  class="btn-azul-pedido" onclick="redirectToDevolucaoCalcado(this.getAttribute('data-calcadoid'), this.getAttribute('data-pedidoid'))">Solicitar devolução</button>
                         </a>
                     </div>
                 }
@@ -98,8 +98,8 @@
             @if (pedido.Any(pedidos => pedidos.sta_comp_fase == "ENTREGUE"))
             {
                 <div class="center-acompanhar-pedido">
-                    <a class="acompanhar-pedido-button" data-pedidoid="@pedido.First().ped_cal_ped_id">
-                        <button class="btn-azul-pedido-geral" onclick="redirectToDevolucaoPedido(this.getAttribute('data-pedidoid'))">Solicitar devolução do pedido</button>
+                    <a  class="acompanhar-pedido-button" data-pedidoid="@pedido.First().ped_cal_ped_id">
+                        <button class="btn-azul-pedido-geral" id="pedido-completo" onclick="redirectToDevolucaoPedido(this.getAttribute('data-pedidoid'))">Solicitar devolução do pedido</button>
                     </a>
                 </div>
             }
