--- a/EcommerceBack/Views/FormaPagamento/FormaPagamento.cshtml
+++ b/EcommerceBack/Views/FormaPagamento/FormaPagamento.cshtml
@@ -8,7 +8,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Sucesso!</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button type="button" id="fechar" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
@@ -43,12 +43,14 @@
                 <li class="nav-item nav-item-cart">
                     <a class="nav-link custom-link" style="color: white;" href="@Url.Action("PaginaInicial", "PaginaInicial")"><i class="fas fa-home"></i> Tela inicial</a>
                 </li>
+
                 <li class="nav-item nav-item-cart">
                     <a class="nav-link custom-link" style="color: white;" href="@Url.Action("CarrinhoCompras", "CarrinhoCompras")">
                         <i class="fas fa-shopping-cart"><span id="quantidade-item-cart">0</span></i>
                         Carrinho
                     </a>
                 </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="#">
                         <input type="text" class="form-control search-input" placeholder="Pesquisar produtos...">
@@ -59,7 +61,7 @@
         <div class="navbar-nav navbar-nav-right">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" style="color: white;" href="pedidos_status_cliente.html"><i class="fas fa-file-alt"></i> Pedidos</a>
+                    <a id="telaPedidos" class="nav-link" style="color: white;" href="@Url.Action("PedidosCliente", "PedidosCliente")"><i class="fas fa-file-alt"></i> Pedidos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" style="color: white;" href="#"> Login <i class="fas fa-user"></i></a>
