inclusão de cupom de troca

--- a/EcommerceBack/Views/FormaPagamento/FormaPagamento.cshtml
+++ b/EcommerceBack/Views/FormaPagamento/FormaPagamento.cshtml
@@ -71,26 +71,29 @@
     
         <h2>Forma de Pagamento</h2>
 
-        <button class="btn-azul btn-azul-pagamento" id="meuBotaoCupom">Adicionar cupom de troca</button>
+        
 
 
 
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <!-- ... Seu código atual ... -->
-
                     <div class="lista-cartoes" id="listaCartoes">
                     </div>
                 </div>
-
-
-                <!-- Cartões serão renderizados aqui -->
+            </div>
+            <h2>Cupons de Troca</h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="lista-cupons" id="listaCupons">
+                    </div>
+                </div>
             </div>
             <br>
             <button class="btn-azul btn-azul-pagamento" id="meuBotaoCartao">Adicionar cartão de crédito</button>
             <br>
-
+            <button class="btn-azul btn-azul-pagamento" id="meuBotaoCupom">Adicionar cupom de troca</button>
+            <br>
 
             <div class="escolhe-pedido">
                 <form action="">
