--- a/EcommerceBack/Views/PaginaInicial/PaginaInicial.cshtml
+++ b/EcommerceBack/Views/PaginaInicial/PaginaInicial.cshtml
@@ -55,7 +55,7 @@
                     <input type="hidden" id="@calcados.cal_id">
                     <img class="image-index" src="~/imagens/@(calcados.cal_marca.Replace(" ", "").ToLower())@(calcados.cal_modelo.Replace(" ", "").ToLower())-1.png" alt="">
                     <p class="p-index">@calcados.cal_marca @calcados.cal_modelo</p>
-                    <p class="p-index">@calcados.cal_cat_id</p>
+                    <p class="p-index">@calcados.cat_nome</p>
                     <p class="p-index">@calcados.cal_valor</p>
                     @{
                         decimal valorTotal = calcados.cal_valor;
@@ -76,7 +76,7 @@
                 <input type="hidden" id="@calcados.cal_id">
                     <img class="image-index" src="~/imagens/@(calcados.cal_marca.Replace(" ", "").ToLower())@(calcados.cal_modelo.Replace(" ", "").ToLower())-1.png" alt="">
                 <p class="p-index">@calcados.cal_marca @calcados.cal_modelo</p>
-                <p class="p-index">@calcados.cal_cat_id</p>
+                <p class="p-index">@calcados.cat_nome</p>
                 <p class="p-index">@calcados.cal_valor</p>
                     @{
                         decimal valorTotal = calcados.cal_valor;
