--- a/EcommerceBack/Views/PedidoAdmin/PedidoAdmin.cshtml
+++ b/EcommerceBack/Views/PedidoAdmin/PedidoAdmin.cshtml
@@ -4,6 +4,7 @@
 }
 
 <body>
+    <a href="@Url.Action("AnaliseVendas", "AnaliseVendas")"><button class="btn-azul" id="analise-vendas">Analisar vendas</button></a>
 
     <div class="container-consulta">
         <input type="text" id="termoPesquisa" placeholder="Digite aqui...">
