--- a/EcommerceBack/Views/Shared/_Layout.cshtml
+++ b/EcommerceBack/Views/Shared/_Layout.cshtml
@@ -49,6 +49,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Devolucao" asp-action="Devolucao">Devolucao</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Login">Login</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="AnaliseVendas" asp-action="AnaliseVendas">AnaliseVendas</a>
+                        </li>
                     </ul>
                 </div>
             </div>
