--- a/EcommerceBack/Views/Cliente/Cliente.cshtml
+++ b/EcommerceBack/Views/Cliente/Cliente.cshtml
@@ -306,6 +306,7 @@
                     <div class="col">Valor Total</div>
                     <div class="col">Valor Frete</div>
                     <div class="col">Valor dos Produtos</div>
+                    <div class="col">Data da transação</div>
                     <div class="col">Endereço de Entrega</div>
                 </div>
                 <div id="resultadoPesquisaTransacoes">
