Implementado melhoria na remoção

--- a/EcommerceBack/Views/Cliente/Cliente.cshtml
+++ b/EcommerceBack/Views/Cliente/Cliente.cshtml
@@ -407,7 +407,7 @@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
 
-    <script src="~/scriptCliente.js"></script>
+    <script src="~/js/scriptCliente.js"></script>
 
     <script>
         document.addEventListener("DOMContentLoaded", function () {
