--- a/EcommerceBack/Views/PedidoAdmin/PedidoAdmin.cshtml
+++ b/EcommerceBack/Views/PedidoAdmin/PedidoAdmin.cshtml
@@ -80,6 +80,6 @@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
 
-    <script src="~/scriptPedidoAdmin.js"></script>
+    <script src="~/js/scriptPedidoAdmin.js"></script>
 
 </body>
