--- a/EcommerceBack/wwwroot/css/style.css
+++ b/EcommerceBack/wwwroot/css/style.css
@@ -545,6 +545,12 @@ svg:hover circle {
     justify-content: center;
 }
 
+.container-geral-resumo-2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
 .container-geral-resumo {
     display: flex;
     justify-content: center;
