inclusão informações de cupom

--- a/EcommerceBack/Views/PedidoAdmin/PedidoAdmin.cshtml
+++ b/EcommerceBack/Views/PedidoAdmin/PedidoAdmin.cshtml
@@ -64,10 +64,14 @@
                     <select id="faseCompra" class="form-select input-card">
                         <option selected>Selecione...</option>
                         <option value="1">EM PROCESSAMENTO</option>
-                        <option value="2">EM TRANSITO</option>
-                        <option value="3">ENTREGUE</option>
-                        <option value="4">TROCA AUTORIZADA</option>
-                        <option value="5">EM TROCA</option>
+                        <option value="2">PEDIDO APROVADO</option>
+                        <option value="3">PAGAMENTO RECUSADO</option>
+                        <option value="4">EM TRÂNSITO</option>
+                        <option value="5">ENTREGUE</option>
+                        <option value="6">TROCA SOLICITADA</option>
+                        <option value="7">TROCA APROVADA</option>
+                        <option value="8">TROCA REALIZADA</option>
+                        <option value="9">"TROCA RECUSADA"</option>
                     </select>
                 </div>
                 <br>
