--- a/EcommerceBack/Views/Shared/_Layout.cshtml
+++ b/EcommerceBack/Views/Shared/_Layout.cshtml
@@ -49,6 +49,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Devolucao" asp-action="Devolucao">Devolucao</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ConsultarCupom" asp-action="ConsultarCupom">Cupom</a>
+                        </li>
                     </ul>
                 </div>
             </div>
