--- a/EcommerceBack/Views/CarrinhoCompras/CarrinhoCompras.cshtml
+++ b/EcommerceBack/Views/CarrinhoCompras/CarrinhoCompras.cshtml
@@ -229,7 +229,7 @@
                 document.querySelector('.carrinho-vazio').style.display = 'none';
             }
 
-            /*if (carrinhoItens.length > 0) {
+            if (carrinhoItens.length > 0) {
                 carrinho.forEach(function (item) {
                     if (item.dados[0].tempoLimite && Date.now() < item.dados[0].tempoLimite) {
                         setTimeout(function () {
@@ -242,7 +242,7 @@
                     }
                 });
 
-            }*/
+            }
             
         });
     </script>
