--- a/EcommerceBack/Views/FormaPagamento/FormaPagamento.cshtml
+++ b/EcommerceBack/Views/FormaPagamento/FormaPagamento.cshtml
@@ -73,14 +73,10 @@
     
         <h2>Forma de Pagamento</h2>
 
-        
-
-
-
         <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="lista-cartoes" id="listaCartoes">
+        <div class="row" style="width: 1200px; box-sizing: border-box;">
+            <div class="col-md-6" style="width: 1200px; box-sizing: border-box;">
+                <div class="lista-cartoes" id="listaCartoes" style="width: 1200px; box-sizing: border-box;">
                     </div>
                 </div>
             </div>
@@ -111,8 +107,9 @@
             <div class="linha-horizontal"></div>
             <br>
 
-            <div class="container-resumo-pedido">
-                <p class="cor-azul"><strong>Resumo</strong></p>
+            <p class="cor-azul"><strong>Resumo</strong></p>
+
+            <div class="container-geral-resumo-2">
                 <table>
                     <tr>
                         <td class="td-esquerda-pedido">Valor dos produtos</td>
