--- a/EcommerceBack/Views/PedidosCliente/PedidosCliente.cshtml
+++ b/EcommerceBack/Views/PedidosCliente/PedidosCliente.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "PedidosCliente";
 }
 
-<body>
+<body onload="carregarValorCarrinho()">
     <nav class="navbar navbar-expand-lg navbar-light custom-navbar justify-content-between">
         <div class="container">
             <ul class="navbar-nav">
