--- a/EcommerceBack/wwwroot/css/site.css
+++ b/EcommerceBack/wwwroot/css/site.css
@@ -867,6 +867,7 @@ h1, h2 {
     font-family: Poppins;
 }
 
+
 .cartao-block {
     display: flex;
     flex-direction: column;
@@ -880,6 +881,14 @@ h1, h2 {
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     font-family: Poppins;
     margin-bottom: 20px;
+}
+
+.lista-cartoes {
+    width: 100%;
+}
+
+.lista-cupons {
+    width: 100%;
 }
 
 .bandeira {
