--- a/EcommerceBack/wwwroot/css/style.css
+++ b/EcommerceBack/wwwroot/css/style.css
@@ -831,19 +831,25 @@ h1, h2{
     font-family: Poppins;
 }
 
+
+
 .cartao-block {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     width: 100%;
-    max-width: 245px; 
+    max-width: 245px;
     background-color: #f5f5f5;
     border-radius: 8px;
     padding: 20px;
-    margin-left: 436px; 
+    margin-right: 457px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     font-family: Poppins;
     margin-bottom: 20px;
+}
+
+.lista-cupons {
+    width: 100%;
 }
 
 .bandeira {
