inclusão de consultar cupom e pedido admin no shared

--- a/EcommerceBack/Views/Shared/_Layout.cshtml
+++ b/EcommerceBack/Views/Shared/_Layout.cshtml
@@ -57,6 +57,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="AnaliseVendas" asp-action="AnaliseVendas">AnaliseVendas</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ConsultarCupom" asp-action="ConsultarCupom">ConsultarCupom</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="PedidoAdmin" asp-action="PedidoAdmin">PedidoAdmin</a>
+                        </li>
                     </ul>
                 </div>
             </div>
