--- a/EcommerceBack/Views/Cliente/Cliente.cshtml
+++ b/EcommerceBack/Views/Cliente/Cliente.cshtml
@@ -4,52 +4,40 @@
 }
 
 <body>
-    <!-- Modal de Sucesso -->
-    <!--<div class="modal modal-success" id="modalSuccess">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Sucesso!</h5>
-                    <button type="button" class="close-button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    Ação realizada com sucesso.
-                </div>
-            </div>
-        </div>
-    </div>-->
-    <!-- Modal de Erro -->
-    <!--<div class="modal modal-error" id="modalError">
-      <div class="modal-dialog">
-          <div class="modal-content">
-              <div class="modal-header">
-                  <h5 class="modal-title">Erro!</h5>
-                  <button type="button" class="close-button" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                  </button>
-              </div>
-              <div class="modal-body">
-                  Houve um erro ao realizar a ação.
-              </div>
-          </div>
-      </div>
-    </div>-->
-    <!--<div class="container mt-4">
-        <h1 class="text-center">Gerenciamento de Clientes</h1>
-        <button class="btn btn-primary mb-2" data-bs-toggle="modal" data-bs-target="#novoClienteModal">
-            Incluir Novo Cliente
-        </button>
 
-
-    </div>-->
     <style>
         .container-consulta {
             text-align: right;
         }
 
     </style>
+
+    <nav class="navbar navbar-expand-lg navbar-light custom-navbar justify-content-between">
+        <div class="container">
+            <ul class="navbar-nav">
+                <li class="nav-item nav-item-cart">
+                    <a class="nav-link custom-link" style="color: white;" href="@Url.Action("PaginaInicial", "PaginaInicial")"><i class="fas fa-home"></i> Tela inicial</a>
+                </li>
+
+                <li class="nav-item nav-item-cart">
+                    <a class="nav-link custom-link" style="color: white;" href="@Url.Action("CarrinhoCompras", "CarrinhoCompras")">
+                        <i class="fas fa-shopping-cart"><span id="quantidade-item-cart">0</span></i>
+                        Carrinho
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="navbar-nav navbar-nav-right">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" style="color: white;" href="@Url.Action("PedidosCliente", "PedidosCliente")"><i class="fas fa-file-alt"></i> Pedidos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" style="color: white;" href="#"> Login <i class="fas fa-user"></i></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
     <div class="container mt-4">
         <h1 class="text-center">Gerenciamento de Clientes</h1>
