--- a/EcommerceBack/Views/PedidoAdmin/PedidoAdmin.cshtml
+++ b/EcommerceBack/Views/PedidoAdmin/PedidoAdmin.cshtml
@@ -4,10 +4,33 @@
 }
 
 <body>
-    <a href="@Url.Action("AnaliseVendas", "AnaliseVendas")"><button class="btn-azul" id="analise-vendas">Analisar vendas</button></a>
 
-    
+    <nav class="navbar navbar-expand-lg navbar-light custom-navbar justify-content-between">
+        <div class="container">
+            <ul class="navbar-nav">
+                <li class="nav-item nav-item-cart">
+                    <a class="nav-link custom-link" style="color: white;" href="@Url.Action("PaginaInicial", "PaginaInicial")"><i class="fas fa-home"></i> Tela inicial</a>
+                </li>
 
+                <li class="nav-item nav-item-cart">
+                    <a class="nav-link custom-link" style="color: white;" href="@Url.Action("CarrinhoCompras", "CarrinhoCompras")">
+                        <i class="fas fa-shopping-cart"><span id="quantidade-item-cart">0</span></i>
+                        Carrinho
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="navbar-nav navbar-nav-right">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" style="color: white;" href="@Url.Action("PedidosCliente", "PedidosCliente")"><i class="fas fa-file-alt"></i> Pedidos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" style="color: white;" href="#"> Login <i class="fas fa-user"></i></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
     <div class="container-consulta">
         <input type="text" id="termoPesquisa" placeholder="Digite aqui...">
