--- a/EcommerceBack/wwwroot/css/style.css
+++ b/EcommerceBack/wwwroot/css/style.css
@@ -838,11 +838,25 @@ h1, h2{
     flex-direction: column;
     align-items: flex-start;
     width: 100%;
-    max-width: 245px;
+    max-width: 242px;
     background-color: #f5f5f5;
     border-radius: 8px;
     padding: 20px;
     margin-right: 457px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    font-family: Poppins;
+    margin-bottom: 20px;
+}
+
+.cartao-block-troca {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 390px;
+    max-width: 390px;
+    background-color: #f5f5f5;
+    border-radius: 8px;
+    padding: 20px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     font-family: Poppins;
     margin-bottom: 20px;
@@ -1088,8 +1102,8 @@ nav#menu a:hover {
 .container-login {
     display: flex;
     flex-direction: column;
-    justify-content: center; /* Posiciona o conteúdo no lado direito */
-    padding: 20px; /* Espaçamento para separar da borda da tela */
+    justify-content: center;
+    padding: 20px; 
     margin: auto;
     padding: 20px;
     width: 875.083px;
@@ -1154,8 +1168,8 @@ nav#menu a:hover {
 .container-analise {
     display: flex;
     flex-direction: column;
-    justify-content: center; /* Posiciona o conteúdo no lado direito */
-    padding: 20px; /* Espaçamento para separar da borda da tela */
+    justify-content: center; 
+    padding: 20px; 
     margin: auto;
     padding: 20px;
     width: 875.083px;
@@ -1165,4 +1179,20 @@ nav#menu a:hover {
     box-shadow: 0px 4.650578022003174px 6.743337631225586px 0px rgba(0, 0, 0, 0.02), 0px 12.858253479003906px 18.644466400146484px 0px rgba(0, 0, 0, 0.03), 0px 30.957719802856445px 44.888694763183594px 0px rgba(0, 0, 0, 0.03), 0px 102.68897247314453px 148.89901733398438px 0px rgba(0, 0, 0, 0.05);
 }
 
-
+.btn-azul-adm {
+    width: 289px;
+    height: 39px;
+    flex-shrink: 0;
+    border-radius: 4.138px;
+    border: 0.696px solid #294DAA;
+    background: #15368A;
+    color: #FFF;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    display: block;
+    margin: 20px
+}
